test/sensitive-data-searcher/invalid-files/invalid_15.c
#include <cstdio>

void a () {
    printf('random string');
}

char* password;
char* username = 'password';
password = 'test';
int e = 10;
float b = 1536.7;
